// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Popover should render react-node 1`] = `
"<div><div class=\\"tooltip \\"><div></div><style>
        .tooltip-content.popover {
          filter: drop-shadow(0px 6px 16px rgba(0, 0, 0, 0.08));
        }
      </style></div><div class=\\"tooltip-content popover \\" style=\\"position: absolute; left: 0px; top: 0px; transform: translate(10px, 110px);\\" data-popper-reference-hidden=\\"true\\" data-popper-escaped=\\"true\\" data-popper-placement=\\"bottom\\"><div class=\\"tooltip-arrow\\" style=\\"position: absolute; left: 0px; transform: translate(10px, 0px);\\"></div><div class=\\"inner\\"><div class=\\"items\\"><p id=\\"test\\">custom-content</p></div><style>
        .inner {
          padding: 0;
          text-align: left;
          min-width: 17.1429rem;
          max-width: 34.2857rem;
        }
        .inner .items {
          max-height: 17.1429rem;
          overflow: auto;
        }
        .inner .title .item.title {
          line-height: 1.1429rem;
          font-weight: 500;
          font-size: 1rem;
          color: #333;
        }
      </style></div></div><style>
        .tooltip {
          display: inline-block;
        }

        .tooltip-content {
          box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.08);
          border-radius: 4px;
          z-index: 1000;
          color: #000;
          background-color: #fff;
          padding: calc(0.5714rem * 1.5);
          border-radius: 4px;
        }

        .tooltip-arrow,
        .tooltip-arrow::before {
          position: absolute;
          width: 10px;
          height: 10px;
          z-index: -1;
        }

        .tooltip-arrow::before {
          content: '';
          transform: rotate(45deg);
          background-color: red;
          background-color: #fff;
        }
        .tooltip-content[data-popper-placement^='top'] > .tooltip-arrow {
          bottom: -5px;
        }

        .tooltip-content[data-popper-placement^='bottom'] > .tooltip-arrow {
          top: -5px;
        }

        .tooltip-content[data-popper-placement^='left'] > .tooltip-arrow {
          right: -5px;
        }

        .tooltip-content[data-popper-placement^='right'] > .tooltip-arrow {
          left: -5px;
        }
      </style></div>"
`;

exports[`Popover should work with different placement 1`] = `
"<div><div class=\\"tooltip \\"><div></div><style>
        .tooltip-content.popover {
          filter: drop-shadow(0px 6px 16px rgba(0, 0, 0, 0.08));
        }
      </style></div><div class=\\"tooltip-content popover \\" style=\\"position: absolute; left: 0px; top: 0px; bottom: 0px; transform: translate(10px, -10px);\\" data-popper-reference-hidden=\\"true\\" data-popper-escaped=\\"true\\" data-popper-placement=\\"top-end\\"><div class=\\"tooltip-arrow\\" style=\\"position: absolute; left: 0px; transform: translate(10px, 0px);\\"></div><div class=\\"inner\\"><div class=\\"items\\">test</div><style>
        .inner {
          padding: 0;
          text-align: left;
          min-width: 17.1429rem;
          max-width: 34.2857rem;
        }
        .inner .items {
          max-height: 17.1429rem;
          overflow: auto;
        }
        .inner .title .item.title {
          line-height: 1.1429rem;
          font-weight: 500;
          font-size: 1rem;
          color: #333;
        }
      </style></div></div><style>
        .tooltip {
          display: inline-block;
        }

        .tooltip-content {
          box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.08);
          border-radius: 4px;
          z-index: 1000;
          color: #000;
          background-color: #fff;
          padding: calc(0.5714rem * 1.5);
          border-radius: 4px;
        }

        .tooltip-arrow,
        .tooltip-arrow::before {
          position: absolute;
          width: 10px;
          height: 10px;
          z-index: -1;
        }

        .tooltip-arrow::before {
          content: '';
          transform: rotate(45deg);
          background-color: red;
          background-color: #fff;
        }
        .tooltip-content[data-popper-placement^='top'] > .tooltip-arrow {
          bottom: -5px;
        }

        .tooltip-content[data-popper-placement^='bottom'] > .tooltip-arrow {
          top: -5px;
        }

        .tooltip-content[data-popper-placement^='left'] > .tooltip-arrow {
          right: -5px;
        }

        .tooltip-content[data-popper-placement^='right'] > .tooltip-arrow {
          left: -5px;
        }
      </style></div>"
`;

exports[`Popover should work with prop title 1`] = `
"<div><div class=\\"tooltip \\">Menu<style>
        .tooltip-content.popover {
          filter: drop-shadow(0px 6px 16px rgba(0, 0, 0, 0.08));
        }
      </style></div><div class=\\"tooltip-content popover \\" style=\\"position: absolute; left: 0px; top: 0px; transform: translate(10px, 110px);\\" data-popper-reference-hidden=\\"true\\" data-popper-escaped=\\"true\\" data-popper-placement=\\"bottom\\"><div class=\\"tooltip-arrow\\" style=\\"position: absolute; left: 0px; transform: translate(10px, 0px);\\"></div><div class=\\"inner\\"><div class=\\"title\\"><div class=\\"item  title \\">Popover title<style>
          .item {
            display: flex;
            justify-content: flex-start;
            align-items: center;
            color: #666;
            font-size: 1rem;
            line-height: 1.4286rem;
            text-align: left;
            transition: color 0.1s ease 0s, background-color 0.1s ease 0s;
            width: 100%;
            padding: 1.1429rem;
            box-sizing: border-box;
          }

          .item:hover {
            color: #333;
          }

          .item > :global(*) {
            margin: 0;
          }

          .item.title {
            line-height: 1.1429rem;
            font-weight: 500;
            font-size: 1rem;
            color: #333;
          }

          .item.line {
            line-height: 0;
            height: 0;
            padding: 0;
            border-top: 1px solid #f1f3f6;
            width: 100%;
          }
        </style></div><div class=\\"item line  \\"><style>
          .item {
            display: flex;
            justify-content: flex-start;
            align-items: center;
            color: #666;
            font-size: 1rem;
            line-height: 1.4286rem;
            text-align: left;
            transition: color 0.1s ease 0s, background-color 0.1s ease 0s;
            width: 100%;
            padding: 1.1429rem;
            box-sizing: border-box;
          }

          .item:hover {
            color: #333;
          }

          .item > :global(*) {
            margin: 0;
          }

          .item.title {
            line-height: 1.1429rem;
            font-weight: 500;
            font-size: 1rem;
            color: #333;
          }

          .item.line {
            line-height: 0;
            height: 0;
            padding: 0;
            border-top: 1px solid #f1f3f6;
            width: 100%;
          }
        </style></div></div><div class=\\"items\\"><p>popover content</p></div><style>
        .inner {
          padding: 0;
          text-align: left;
          min-width: 17.1429rem;
          max-width: 34.2857rem;
        }
        .inner .items {
          max-height: 17.1429rem;
          overflow: auto;
        }
        .inner .title .item.title {
          line-height: 1.1429rem;
          font-weight: 500;
          font-size: 1rem;
          color: #333;
        }
      </style></div></div><style>
        .tooltip {
          display: inline-block;
        }

        .tooltip-content {
          box-shadow: 0px 6px 16px rgba(0, 0, 0, 0.08);
          border-radius: 4px;
          z-index: 1000;
          color: #000;
          background-color: #fff;
          padding: calc(0.5714rem * 1.5);
          border-radius: 4px;
        }

        .tooltip-arrow,
        .tooltip-arrow::before {
          position: absolute;
          width: 10px;
          height: 10px;
          z-index: -1;
        }

        .tooltip-arrow::before {
          content: '';
          transform: rotate(45deg);
          background-color: red;
          background-color: #fff;
        }
        .tooltip-content[data-popper-placement^='top'] > .tooltip-arrow {
          bottom: -5px;
        }

        .tooltip-content[data-popper-placement^='bottom'] > .tooltip-arrow {
          top: -5px;
        }

        .tooltip-content[data-popper-placement^='left'] > .tooltip-arrow {
          right: -5px;
        }

        .tooltip-content[data-popper-placement^='right'] > .tooltip-arrow {
          left: -5px;
        }
      </style></div>"
`;
